# re-pico

./: .gitignore  Makefile  setup.sh
make/: common.mk  ekh05.mk  rp2040.mk
src/: _template.hpp  abi.cpp  address-map.hpp  bits.hpp  boot2.cpp  busctrl.hpp  clocks.hpp  compile_flags.txt  connect  console.cpp  console.hpp  crypto  hw  inflate.cpp  inflate.hpp  int.hpp  intrinsics.hpp  io-bank0.hpp  io-common.hpp  io-qspi.hpp  link.ld  m0plus.hpp  main.cpp  math.hpp  net  pads.hpp  pll.hpp  print.cpp  print.hpp  psm.hpp  resets.hpp  rom.cpp  rom.hpp  rosc.hpp  sio.hpp  split.cpp  split.hpp  ssi.hpp  stub.cpp  syscfg.hpp  (+6 more)
src/coop/: cohandle.hpp  coop.hpp  coroutine.hpp  generator-pre.hpp  generator.hpp  io-pre.hpp  io.hpp  promise-pre.hpp  promise.hpp  runner-pre.hpp  runner.cpp  runner.hpp  task-handle-pre.hpp
src/ekh05/: boot.cpp  halow.cpp  halow.hpp  hw  link-boot.ld  link-ram.ld  link.ld  main.cpp  system.cpp  system.hpp
src/ekh05/hal/: gpio.cpp  gpio.hpp  rng.cpp  sleep.cpp  sleep.hpp  spi.cpp  time.cpp  time.hpp  uart.cpp  uart.hpp
src/hal/: gpio.hpp  rng.hpp  sleep.hpp  spi.hpp  time.hpp  uart.hpp
src/halow/: command.cpp  command.hpp  commands.hpp  connect.cpp  connect.hpp  crc.hpp  dot11.hpp  firmware.cpp  firmware.hpp  fw-store.hpp  halow.cpp  halow.hpp  host-table.cpp  host-table.hpp  netif.cpp  netif.hpp  platform.hpp  rate-code.hpp  scan.cpp  scan.hpp  skb.hpp  util.hpp  yaps.cpp  yaps.hpp
src/net/: arp.cpp  arp.hpp  ip.cpp  ip.hpp  mac-addr.hpp  packet.cpp
src/rp2040/: atomic.cpp  boot.cpp  boot2.cpp  hw  link-boot.ld  link-ram.ld  link.ld  main.cpp  system.cpp  system.hpp
src/rp2040/hal/: time.cpp  time.hpp  uart.cpp  uart.hpp
src/spi-flash/: w25q80.hpp
submodules/coop/: meson.build
submodules/coop/src/coop/: event.hpp  ext-event-pre.hpp  ext-event.hpp  lock-guard-pre.hpp  lock-guard.hpp  multi-event-pre.hpp  multi-event.hpp  mutex-pre.hpp  mutex.hpp  platform.hpp  promise.hpp  runner-pre.hpp  runner.cpp  runner.hpp  select.hpp  single-event-pre.hpp  single-event.hpp  task-handle.hpp  timer.hpp
submodules/coop/tests/: coop-support.cpp  coop.cpp  noxx-support.cpp
submodules/coop/tests/include/hal/: time.hpp
submodules/hw-rp2040/: _template.hpp  address-map.hpp  busctrl.hpp  clocks.hpp  io-bank0.hpp  io-common.hpp  io-qspi.hpp  m0plus.hpp  nvic.hpp  pads.hpp  pll.hpp  psm.hpp  resets.hpp  rom.hpp  rosc.hpp  sio.hpp  ssi.hpp  syscfg.hpp  sysinfo.hpp  timer.hpp  uart.hpp  wd.hpp  xosc.hpp
submodules/hw-rp2040/spi-flash/: w25q80.hpp
submodules/hw-stm32u585/: address-map.hpp  dbgmcu.hpp  exti.hpp  flash.hpp  gpio.hpp  m33.hpp  nvic.hpp  pwr.hpp  rcc.hpp  rng.hpp  scb.hpp  spi.hpp  systick.hpp  usart.hpp
submodules/nolibc++/: meson.build
submodules/nolibc++/src/: algorithm.hpp  array.hpp  assert.hpp  atomic.hpp  bits.hpp  buf-reader.hpp  buf-writer.hpp  bytes-alias.hpp  charconv.hpp  comptime-string.hpp  defer.hpp  endian.hpp  format.hpp  int.hpp  integer-sequence.hpp  malloc.cpp  malloc.hpp  math.hpp  move.hpp  optional.hpp  platform.hpp  span.hpp  string-view.cpp  string-view.hpp  string.cpp  string.hpp  type-traits.hpp  unique-ptr.hpp  utility.hpp  variant.hpp  vector.hpp
submodules/nolibc++/src/format/: boolean.hpp  formatter.hpp  integer.hpp  pointer.hpp  string.hpp
submodules/nolibc++/tests/: charconv.cpp  format.cpp  malloc.cpp  string.cpp  unique-ptr.cpp  variant.cpp  vector.cpp
submodules/re-connect/: meson.build
submodules/re-connect/src/connect/: dot1x.hpp  eapol.cpp  eapol.hpp  ie.hpp  mac-addr.hpp  sae.cpp  sae.hpp
submodules/re-connect/submodules/: nolibc++  re-crypto
submodules/re-connect/tests/: eapol.cpp  sae.cpp  util.hpp
submodules/re-crypto/: meson.build
submodules/re-crypto/src/crypto/: aes-cmac.cpp  aes-cmac.hpp  aes-keywrap.cpp  aes-keywrap.hpp  aes.cpp  aes.hpp  bn.hpp  dot1x.hpp  eapol.cpp  eapol.hpp  hmac-sha256.cpp  hmac-sha256.hpp  ie.hpp  kdf.cpp  kdf.hpp  mac-addr.hpp  p256.cpp  p256.hpp  rng.hpp  sae.cpp  sae.hpp  sha256.cpp  sha256.hpp  util.hpp
submodules/re-crypto/tests/: aes-cmac.cpp  aes-keywrap.cpp  aes.cpp  eapol.cpp  hmac-sha256.cpp  noxx-support.cpp  p256.cpp  sae.cpp  sha256.cpp  util.hpp
submodules/re-net/: meson.build
submodules/re-net/src/: coop  noxx
submodules/re-net/src/net/: arp.cpp  arp.hpp  dhcp.cpp  dhcp.hpp  ethernet.hpp  icmp.cpp  icmp.hpp  ip.cpp  ip.hpp  mac-addr.hpp  netif.hpp  packet-buf.hpp  packet.hpp  stack.cpp  stack.hpp  tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
submodules/re-net/submodules/: coop
submodules/re-net/tests/: net.cpp  packet.cpp  tap-host.cpp
tools/: generate-halow-fw.py  generate-halow-regdb.py  send-firmware.py
tools/crc/: CRC.h  main.cpp  submodules.txt
